--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,15 @@
 			<artifactId>converter-gson</artifactId>
 			<version>2.0.0-beta3</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/logging-interceptor -->
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>logging-interceptor</artifactId>
+			<version>4.12.0</version>
+		</dependency>
+
+
+
 
 
 	</dependencies>
