--- a/pom.xml
+++ b/pom.xml
@@ -48,8 +48,9 @@
 		<dependency>
 			<groupId>com.squareup.retrofit2</groupId>
 			<artifactId>converter-gson</artifactId>
-			<version>2.0.0-beta3</version>
+			<version>2.9.0</version>
 		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/logging-interceptor -->
 		<dependency>
 			<groupId>com.squareup.okhttp3</groupId>
